--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -1,5 +1,4 @@
 @import 'global/variables';
-
 @import 'bootstrap';
 @import 'glyphicons';
 
@@ -22,3 +21,4 @@
 
 @import 'shared/base';
 @import 'shared/forms';
+@import 'shared/mobile_adjustments';
