--- a/backend/app/views/spree/admin/shared/_order_summary.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_summary.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-3">
+<div class="card">
   <div class="card-header">
     <h3 class="card-title mb-0 h5"><%= Spree.t(:summary) %></h3>
   </div>
