--- a/backend/app/assets/stylesheets/spree/backend/components/_navbar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navbar.scss
@@ -1,21 +1,6 @@
 .header {
+
   .navbar {
-    background-color: $navbar-inverse-bg;
-    padding: 0;
-
-    a:hover {
-      text-decoration: none;
-    }
-  }
-
-  .dropdown-toggle {
-    &[aria-expanded="true"] {
-      background-color: $gray-900;
-    }
-
-    &:hover,
-    &:focus {
-      text-decoration: none;
-    }
+    background-color: $navbar-background-color;
   }
 }
