--- a/backend/app/assets/stylesheets/spree/backend/components/_progress.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_progress.scss
@@ -5,7 +5,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  z-index: 1001;
+  z-index: $zindex-popover;
   .alert {
     box-shadow: none;
     margin: 0;
