--- a/backend/app/assets/stylesheets/spree/backend/shared/_forms.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_forms.scss
@@ -24,3 +24,186 @@ span.or {
     }
   }
 }
+
+.form-actions {
+  margin: ($grid-gutter-width / 2) 0;
+}
+
+
+
+/*
+// RADIO BUTTON STYLE
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label
+{
+    position: relative;
+    padding-left: 28px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: #666;
+}
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #ddd;
+    border-radius: 100%;
+    background: #fff;
+}
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after {
+    content: '';
+    width: 14px;
+    height: 14px;
+    background: $random-accent;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+[type="radio"]:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+[type="radio"]:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+// CUSTOM CHECK BOXES iOS STYLE
+input[type='checkbox'], input[type='checkbox'].form-control  {
+  position: relative !important;
+  -webkit-appearance: none;
+  outline: none;
+  width: 50px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid #D9DADC;
+  border-radius: 50px;
+  box-shadow: inset -20px 0 0 0 #fff;
+}
+
+input[type='checkbox']:after, input[type='checkbox'].form-control:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background: transparent;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
+}
+
+input[type='checkbox']:checked, input[type='checkbox'].form-control:checked {
+  box-shadow: inset 20px 0 0 0 #4ed164;
+  border-color: #4ed164;
+}
+
+input[type='checkbox']:checked:after, input[type='checkbox'].form-control:checked:after {
+  left: 20px;
+  box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
+}
+
+label input[type='checkbox'] { bottom: -10px; }
+
+
+
+
+/* Powered by: https://github.com/tonystar/float-label-css
+ */
+/* Re-usable mixins
+ * https://github.com/tonystar/float-label-css/blob/master/scss/_mixins.scss
+ */
+ /*
+@mixin float-label-container {
+  display: block;
+  position: relative;
+}
+@mixin float-label {
+  label {
+    position: absolute;
+    left: 1em;
+    top: -0.5em;
+    pointer-events: none;
+    cursor: text;
+    font-size: 65%;
+    opacity: 1;
+    transition: all 0.2s;
+    @content;
+  }
+}
+@mixin div-float-label {
+  label {
+    position: absolute;
+    left: 1.31em;
+    top: 0.4em;
+    pointer-events: none;
+    cursor: text;
+    font-size: 65%;
+    opacity: 1;
+    transition: all 0.2s;
+    line-height: 1em;
+    @content;
+  }
+}
+@mixin float-label-input {
+  &::placeholder {
+    opacity: 1;
+    transition: all 0.2s;
+  }
+
+  &:placeholder-shown:not(:focus)::placeholder {
+    opacity: 0;
+  }
+}
+@mixin float-label-scaled {
+  &:placeholder-shown:not(:focus) + * {
+    font-size: 100%;
+    opacity: 0.5;
+    @content;
+  }
+}
+
+div.float-label {
+  @include float-label-container;
+  @include div-float-label;
+
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
+  input[type='text'],
+  select {
+    @include float-label-input;
+    font-size: inherit;
+    width: 100%;
+    line-height: 1.3em;
+    padding-top: 15px;
+    @include float-label-scaled {
+      top: 0.65em;
+      left: 0.5em;
+    }
+
+    &:focus {
+      outline: none;
+      border-color: rgba(0,0,0,.5);
+    }
+  }
+} */
