--- a/backend/app/views/spree/admin/orders/_line_items.html.erb
+++ b/backend/app/views/spree/admin/orders/_line_items.html.erb
@@ -13,7 +13,7 @@
             <th class="text-center"><%= Spree.t(:price) %></th>
             <th class="text-center"><%= Spree.t(:quantity) %></th>
             <th class="text-center"><%= Spree.t(:total_price) %></th>
-            <th class="orders-actions text-center" data-hook="admin_order_form_line_items_header_actions"></th>
+            <th colspan="2" class="orders-actions text-center" data-hook="admin_order_form_line_items_header_actions"></th>
           </tr>
         </thead>
         <tbody>
