--- a/backend/app/views/spree/admin/products/index.html.erb
+++ b/backend/app/views/spree/admin/products/index.html.erb
@@ -48,9 +48,8 @@
   </div>
 <% end %>
 
-<%= render partial: 'spree/admin/shared/index_table_options', locals: { collection: @collection } %>
-
 <% if @collection.any? %>
+<div class="row">
   <table class="table" id="listing_products">
     <thead>
       <tr data-hook="admin_products_index_headers">
@@ -61,7 +60,7 @@
         <th class="text-center">
           <%= sort_link @search, :master_default_price_amount, Spree.t(:master_price), {}, {title: 'admin_products_listing_price_title'} %>
         </th>
-        <th data-hook="admin_products_index_header_actions" class="actions"></th>
+        <th data-hook="admin_products_index_header_actions"></th>
       </tr>
     </thead>
     <tbody>
@@ -72,7 +71,7 @@
             <td class="image"><%= mini_image product %></td>
             <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
             <td class="text-center"><%= product.display_price.to_html rescue '' %></td>
-            <td class="actions actions-3 text-right" data-hook="admin_products_index_row_actions">
+            <td class="text-right" data-hook="admin_products_index_row_actions">
               <%= link_to_edit product, no_text: true, class: 'edit' if can?(:edit, product) && !product.deleted? %>
               <%= link_to_clone product, no_text: true, class: 'clone' if can?(:clone, product) %>
               <%= link_to_delete product, no_text: true if can?(:delete, product) && !product.deleted? %>
@@ -81,6 +80,7 @@
       <% end %>
     </tbody>
   </table>
+</div>
 <% else %>
   <div class="alert alert-info no-objects-found">
     <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Product)) %>,
