--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -1,24 +1,27 @@
-<header class="header logged-in">
-
-  <nav class="navbar fixed-top navbar-dark align-items-stretch" role="navigation">
-    <div class="navbar-header col-3 col-md-2">
-      <%= link_to(
-        image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
-        spree.admin_path,
-        class: "logo navbar-brand"
-      ) %>
+ <header class="header logged-in d-block d-lg-none">
+  <nav class="navbar fixed-top px-0 py-1 border-bottom" role="navigation">
+    <div class="navbar-header col-4">
       <button
         id="sidebar-toggle"
-        class="navbar-toggler h-100 position-absolute m-0 p-0"
-        type="button"
+        class="navbar-toggle btn btn-outline-primary"
+
         aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="icon icon-list-alt"></span> <%= Spree.t(:menu) %>
       </button>
     </div>
-    <div class="col-9 col-md-10 pr-0">
-      <%= render partial: 'spree/admin/shared/account_nav' %>
+    <div class="col-8 text-right">
+      <% if content_for?(:page_actions) || content_for?(:sidebar) %>
+            <div class="page-actions col px-0" data-hook="toolbar">
+              <%= yield :page_actions %>
+                <% if content_for?(:sidebar) %>
+                  <button  id="toggle-dynamic-content-menu"
+                      class="btn btn-outline-primary">
+                      <span class="icon icon-list-alt"></span> <%= Spree.t(:options) %>
+                  </button>
+                  <% end %>
+            </div>
+      <% end %>
     </div>
   </nav>
-
 </header>
